--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pybabelnet.babelnet import BabelNet"
+    "from babelnetpy.babelnet import BabelNet"
    ]
   },
   {
