--- a/examples/example_detail.ipynb
+++ b/examples/example_detail.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "from pybabelnet.babelnet import BabelNet\n",
+    "from babelnetpy.babelnet import BabelNet\n",
     "\n",
     "bn = BabelNet(open(\"key.txt\", \"r\").read())\n",
     "\n",
